--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,121 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D8B3FB"
+    android:background="#EEEEEE"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/textEmail"
-        android:layout_width="378dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="343dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="342dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/textPassword"
-        android:layout_width="378dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="403dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="282dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="378dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="476dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="207dp"
-        android:text="Sign In"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="login"/>
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="200dp"
-        android:layout_height="176dp"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="145dp"
-        android:layout_marginEnd="106dp"
-        android:layout_marginBottom="410dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/flowershopicon" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="360dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="601dp"
-        android:text="Beautiful flowers make your day better"
-        android:textAlignment="center"
-        android:textColor="#27AA56"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="219dp"
-        android:layout_height="59dp"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="96dp"
-        android:layout_marginBottom="636dp"
-        android:text="Green Day"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="#35AF27"
-        android:textSize="34sp"
+        android:id="@+id/txt1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="FLOWER SHOP"
+        android:textSize="50sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        />
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/txtLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="157dp"
-        android:layout_marginTop="696dp"
-        android:layout_marginEnd="158dp"
-        android:layout_marginBottom="16dp"
-        android:text="MaoFack Team"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:text="SIGN UP"
+        android:textStyle="bold"
+        android:textColor="#FF99CC"
+        android:textSize="24sp"
+        android:layout_below="@id/txt1"
+        android:layout_centerInParent="true"
+        />
+
+
+    <Button
+        android:id="@+id/btnLoginF"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="LOGIN"
+        android:layout_marginTop="50dp"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/white"
+        android:layout_below="@+id/txt1"
+        android:layout_toRightOf="@+id/btnSignUpF"
+        />
+    <Button
+        android:id="@+id/btnSignUpF"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="SIGNUP"
+        android:layout_marginTop="50dp"
+        android:layout_below="@id/txt1"
+        android:textColor="@color/white"
+        android:backgroundTint="#FF99CC"
+        />
+
+    <EditText
+        android:id="@+id/username"
+        android:layout_marginTop="100dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autofillHints="@string/prompt_email"
+        android:hint="@string/prompt_email"
+        android:inputType="textEmailAddress"
+        android:selectAllOnFocus="true"
+        android:layout_below="@+id/txt1"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        />
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autofillHints="@string/prompt_password"
+        android:hint="@string/prompt_password"
+        android:imeActionLabel="@string/action_sign_in_short"
+        android:imeOptions="actionDone"
+        android:inputType="textPassword"
+        android:selectAllOnFocus="true"
+        android:layout_below="@+id/username"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        />
+
+    <EditText
+        android:id="@+id/repassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/password"
+        android:autofillHints="@string/prompt_Repassword"
+        android:hint="@string/prompt_Repassword"
+        android:imeActionLabel="@string/action_sign_in_short"
+        android:textSize="25dp"
+        android:inputType="textPassword"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        />
+
+
+    <Button
+        android:id="@+id/btnRegister"
+        android:layout_width="500dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/repassword"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#FF99CC"
+        android:text="REGISTER"
+        android:textSize="20sp" />
+    <Button
+        android:id="@+id/btnAccount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnRegister"
+        android:backgroundTint="#EEEE"
+        android:textColor="@color/black"
+        android:text="Alreay have account"
+        />
+
+
+
+
+</RelativeLayout>
