--- a/app/src/main/res/layout/item_rcv_list_hoa.xml
+++ b/app/src/main/res/layout/item_rcv_list_hoa.xml
@@ -27,6 +27,13 @@
             android:textSize="20dp"
             android:textAlignment="center"
             />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Buy Now" />
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
