--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,26 +14,25 @@
 
     <TextView
         android:id="@+id/txt1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="375dp"
+        android:layout_height="61dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="20dp"
         android:text="FLOWER SHOP"
         android:textSize="50sp"
-        android:textStyle="bold"
-        android:layout_marginTop="70dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        />
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/txtLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SIGN UP"
-        android:textStyle="bold"
-        android:textColor="#FF99CC"
-        android:textSize="24sp"
         android:layout_below="@id/txt1"
         android:layout_centerInParent="true"
-        />
+        android:text="SIGN UP"
+        android:textColor="#FF99CC"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 
     <Button
@@ -68,7 +67,7 @@
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         android:layout_below="@+id/txt1"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:textStyle="bold"
         />
 
@@ -83,7 +82,7 @@
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
         android:layout_below="@+id/username"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         />
@@ -96,10 +95,42 @@
         android:autofillHints="@string/prompt_Repassword"
         android:hint="@string/prompt_Repassword"
         android:imeActionLabel="@string/action_sign_in_short"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:inputType="textPassword"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
+        />
+
+    <EditText
+        android:id="@+id/tv_name"
+        android:hint="Name"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_below="@id/repassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        />
+    <EditText
+        android:id="@+id/tv_gender"
+        android:hint="Gender"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_below="@id/tv_name"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+
+        />
+    <EditText
+        android:id="@+id/tv_address"
+        android:hint="Address"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_below="@id/tv_name"
+        android:layout_toRightOf="@id/tv_gender"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+
         />
 
 
@@ -107,7 +138,7 @@
         android:id="@+id/btnRegister"
         android:layout_width="500dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/repassword"
+        android:layout_below="@+id/tv_gender"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         android:backgroundTint="#FF99CC"
