--- a/app/src/main/res/layout/admin_detail_flower.xml
+++ b/app/src/main/res/layout/admin_detail_flower.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".Detail_Flower_Activity">
+        tools:context=".Detail_Flower_Admin">
 
         <ImageView
             android:id="@+id/img_hoaselect"
@@ -20,7 +20,7 @@
             android:src="@drawable/flower"
             />
 
-        <TextView
+        <EditText
             android:id="@+id/tv_name"
             android:layout_width="386dp"
             android:layout_height="60dp"
@@ -31,7 +31,7 @@
 
         <LinearLayout
             android:layout_width="386dp"
-            android:layout_height="40dp"
+            android:layout_height="51dp"
             android:layout_margin="10dp"
             android:orientation="horizontal">
 
@@ -40,11 +40,11 @@
                 android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
                 android:text="Color: "
-                android:textStyle="bold"
                 android:textAlignment="textStart"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
-            <TextView
+            <EditText
                 android:id="@+id/tv_color"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -54,7 +54,7 @@
 
         <LinearLayout
             android:layout_width="386dp"
-            android:layout_height="40dp"
+            android:layout_height="51dp"
             android:layout_margin="10dp"
             android:orientation="horizontal">
 
@@ -63,14 +63,14 @@
                 android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
                 android:text="Price: "
-                android:textStyle="bold"
                 android:textAlignment="textStart"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
-            <TextView
+            <EditText
                 android:id="@+id/tv_price"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:text="TextView"
                 android:textSize="30sp" />
         </LinearLayout>
@@ -82,12 +82,12 @@
             android:text="Description: "
             android:textStyle="bold"
             android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:textSize="30sp" />
 
-        <TextView
+        <EditText
             android:id="@+id/tv_description"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="58dp"
             android:layout_marginLeft="40dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="40dp"
@@ -95,36 +95,12 @@
             android:text="TextView"
             android:textSize="20sp" />
 
-        <LinearLayout
-            android:layout_width="386dp"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:layout_marginTop="100dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="10dp"
-                android:text="Number to buy: "
-                android:textStyle="bold"
-                android:textAlignment="textStart"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/tv_number"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="0"
-                android:textAlignment="center" />
-        </LinearLayout>
-
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/buttonsave"
             android:layout_width="match_parent"
             android:layout_height="66dp"
             android:layout_margin="10dp"
-            android:text="Add To Cart" />
+            android:text="Save" />
 
     </LinearLayout>
 
