--- a/app/src/main/res/layout/activity_add_to_cart.xml
+++ b/app/src/main/res/layout/activity_add_to_cart.xml
@@ -40,8 +40,8 @@
         android:id="@+id/btnBill"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
         android:text="Calculate bill"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
