--- a/app/src/main/res/layout/activity_detail_flower.xml
+++ b/app/src/main/res/layout/activity_detail_flower.xml
@@ -20,7 +20,6 @@
             android:src="@drawable/flower"
             />
 
-<<<<<<< HEAD
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="386dp"
@@ -29,16 +28,6 @@
             android:text="TextView"
             android:textAlignment="center"
             android:textSize="40sp" />
-=======
-    <TextView
-        android:id="@+id/tv_color"
-        android:layout_width="386dp"
-        android:layout_height="40dp"
-        android:layout_margin="10dp"
-        android:text="TextView"
-        android:textStyle="bold"
-        android:textSize="20sp" />
->>>>>>> f938c7b26cdd14b40143629330dd24e9a4e08f76
 
         <LinearLayout
             android:layout_width="386dp"
@@ -131,7 +120,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnAddToCart"
             android:layout_width="match_parent"
             android:layout_height="66dp"
             android:layout_margin="10dp"
