--- a/app/src/main/res/layout/admin_detail_flower.xml
+++ b/app/src/main/res/layout/admin_detail_flower.xml
@@ -13,7 +13,7 @@
 
         <ImageView
             android:id="@+id/img_hoaselect"
-            android:layout_width="392dp"
+            android:layout_width="match_parent"
             android:layout_height="243dp"
             android:layout_margin="10dp"
             android:scaleType="centerCrop"
@@ -22,7 +22,7 @@
 
         <EditText
             android:id="@+id/tv_name"
-            android:layout_width="386dp"
+            android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_margin="10dp"
             android:text="TextView"
@@ -30,7 +30,7 @@
             android:textSize="40sp" />
 
         <LinearLayout
-            android:layout_width="386dp"
+            android:layout_width="match_parent"
             android:layout_height="51dp"
             android:layout_margin="10dp"
             android:orientation="horizontal">
@@ -53,7 +53,7 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="386dp"
+            android:layout_width="match_parent"
             android:layout_height="51dp"
             android:layout_margin="10dp"
             android:orientation="horizontal">
@@ -87,7 +87,7 @@
         <EditText
             android:id="@+id/tv_description"
             android:layout_width="match_parent"
-            android:layout_height="58dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="40dp"
