--- a/app/src/main/res/layout/bill.xml
+++ b/app/src/main/res/layout/bill.xml
@@ -15,31 +15,116 @@
         android:textAlignment="center"
         android:text="Bill"
         android:textSize="40sp" />
-
-    <TextView
-        android:id="@+id/bill_name"
-        android:layout_width="386dp"
-        android:layout_height="40dp"
+    <LinearLayout
         android:layout_margin="10dp"
-        android:text="Name: user01"
-        android:textStyle="bold"
-        android:textSize="20sp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textview1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name:  "
+            android:textStyle="bold"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/bill_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="User"
+            android:textStyle="bold"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_margin="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textview2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Name:  "
+            android:textStyle="bold"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/bill_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="30/10/2023"
+            android:textStyle="bold"
+            android:textSize="20sp" />
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/bill_list"
+        android:id="@+id/Textview4"
         android:layout_width="386dp"
         android:layout_height="40dp"
         android:layout_margin="10dp"
         android:text="Flower:"
         android:textStyle="bold"
         android:textSize="20sp" />
-    <TextView
-        android:id="@+id/bill_total"
-        android:layout_width="386dp"
-        android:layout_height="40dp"
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="101dp"
+        android:layout_margin="30dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/hoa_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="hoa1:"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/hoa_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="hoa 2:"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/hoa_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="hoa 3:"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+    <LinearLayout
         android:layout_margin="10dp"
-        android:text="Total Price:"
-        android:textStyle="bold"
-        android:textSize="20sp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textview3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Price:  "
+            android:textStyle="bold"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/bill_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="50000"
+            android:textStyle="bold"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnAddToCart"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:layout_margin="10dp"
+        android:text="Add To Cart" />
 
 </LinearLayout>
