--- a/app/src/main/res/layout/listitemcart.xml
+++ b/app/src/main/res/layout/listitemcart.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:id="@+id/listcart"
->
+    >
 
 
         <ImageView
@@ -31,15 +31,25 @@
             android:text="Price Hoa"
             android:textAlignment="center"
             android:textSize="15dp" />
-
-        <TextView
-            android:id="@+id/tv_quantityHoa_cart"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="quantity Hoa"
-            android:textSize="15dp"
-            android:textAlignment="center"
-        />
+            android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_QuantityText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Quantity:" />
+
+                <EditText
+
+                    android:id="@+id/quantity_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
+
+        </LinearLayout>
 
 
 
