--- a/app/src/main/res/layout/activity_add_to_cart.xml
+++ b/app/src/main/res/layout/activity_add_to_cart.xml
@@ -24,28 +24,30 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ListViewCatalog"
-        android:layout_width="408dp"
-        android:layout_height="644dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="394dp"
+        android:layout_height="597dp"
+        android:layout_marginTop="12dp"
         android:background="#ffffff"
         android:cacheColorHint="#ffffff"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="spread"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TextView01" />
 
     <Button
         android:id="@+id/btnBill"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="66dp"
+        android:layout_margin="10dp"
         android:text="Calculate bill"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ListViewCatalog" />
+        app:layout_constraintTop_toBottomOf="@id/ListViewCatalog"
+        app:layout_constraintVertical_bias="0.3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
         
