--- a/app/src/main/res/layout/bill.xml
+++ b/app/src/main/res/layout/bill.xml
@@ -42,13 +42,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/textview2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name:  "
-            android:textStyle="bold"
-            android:textSize="20sp" />
+            android:text="Date: "
+            android:textSize="20sp"
+            android:textStyle="bold" />
         <TextView
             android:id="@+id/bill_date"
             android:layout_width="wrap_content"
@@ -121,10 +122,10 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnAddToCart"
+        android:id="@+id/btnContinueShopping"
         android:layout_width="match_parent"
         android:layout_height="66dp"
         android:layout_margin="10dp"
-        android:text="Add To Cart" />
+        android:text="Continue Shopping" />
 
 </LinearLayout>
