admin activity load sqlite db, update with sqlite

--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -98,7 +98,7 @@
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/buttonsave"
+            android:id="@+id/btncreate"
             android:layout_width="match_parent"
             android:layout_height="66dp"
             android:layout_margin="10dp"
