--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -102,7 +102,8 @@
             android:layout_width="match_parent"
             android:layout_height="66dp"
             android:layout_margin="10dp"
-            android:text="Create" />
+            android:text="Create"
+            android:backgroundTint="#FF99CC"/>
 
     </LinearLayout>
 
