--- a/app/src/main/res/layout/activity_add_to_cart.xml
+++ b/app/src/main/res/layout/activity_add_to_cart.xml
@@ -24,11 +24,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ListViewCatalog"
-        android:layout_width="394dp"
-        android:layout_height="597dp"
+        android:layout_width="391dp"
+        android:layout_height="617dp"
         android:layout_marginTop="12dp"
         android:background="#ffffff"
         android:cacheColorHint="#ffffff"
+        app:layout_constraintBottom_toTopOf="@+id/btnBill"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="spread"
@@ -41,13 +42,14 @@
         android:layout_width="match_parent"
         android:layout_height="66dp"
         android:layout_margin="10dp"
+        android:backgroundTint="#FF99CC"
         android:text="Calculate bill"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ListViewCatalog"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
         
