--- a/app/src/main/res/layout/activity_detail_flower.xml
+++ b/app/src/main/res/layout/activity_detail_flower.xml
@@ -124,7 +124,8 @@
             android:layout_width="match_parent"
             android:layout_height="66dp"
             android:layout_margin="10dp"
-            android:text="Add To Cart" />
+            android:text="Add To Cart"
+            android:backgroundTint="#FF99CC"/>
 
     </LinearLayout>
 
