--- a/app/src/main/res/layout/admin_detail_flower.xml
+++ b/app/src/main/res/layout/admin_detail_flower.xml
@@ -100,7 +100,8 @@
             android:layout_width="match_parent"
             android:layout_height="66dp"
             android:layout_margin="10dp"
-            android:text="Save" />
+            android:text="Save"
+            android:backgroundTint="#FF99CC"/>
 
     </LinearLayout>
 
