--- a/app/src/main/res/layout/bill.xml
+++ b/app/src/main/res/layout/bill.xml
@@ -78,25 +78,7 @@
             android:id="@+id/hoa_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="hoa1:"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/hoa_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="hoa 2:"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/hoa_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="hoa 3:"
+            android:text="..."
             android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -126,6 +108,7 @@
         android:layout_width="match_parent"
         android:layout_height="66dp"
         android:layout_margin="10dp"
-        android:text="Continue Shopping" />
+        android:text="Continue Shopping"
+        android:backgroundTint="#FF99CC"/>
 
 </LinearLayout>
